fix(Details Panel): :bug: fix gap between results and details panel for smaller screens

--- a/src/scss/components/_details-panel.scss
+++ b/src/scss/components/_details-panel.scss
@@ -31,6 +31,10 @@
   &--results-open {
     left: calc($panel-width + 2rem);
     @include transition(left 0.5s ease);
+    @include md {
+      @include transition(left 0.5s ease);
+      left: calc($md-results-panel-width + 1.5rem);
+    }
   }
 
   &--results-collapsed {
